# libsafeqp

./: .gitignore  Makefile  Makefile.am  README.md  autogen.sh  command_sequence  configure.ac  getsource.sh  logopt.java  maker  mingsh.bat  validas.c
DEBIAN/: control  postinst  prerm
RPM/: rpmmacros
RPM/SPECS/: libsafeqp.spec
conic/: Makefile.am  conic.h  main.cpp
controller/: Makefile.am  logopt.java
libsafeqp/: Makefile.am
safecsharp/: Makefile.am
safejava/: Makefile.am  main.cpp  safejava_wrap.cpp
safeperl/: Makefile.am
safepython/: Makefile.am
safeqp/: ETL.cpp  Makefile.am  logopt.cpp  ooptimise.h  readin.cpp
src/: Makefile.am
testU/: Makefile.am  PASopt.cpp
testsafeqp/: Makefile.am  pversion.cpp
