    lib_LTLIBRARIES = libsafeqp.la
    libsafeqp_la_SOURCES = Crash.c     ddmxmulv.c  dgerqf.c    dlasyf.c    dormrq.c    dsccopy.c   dsmxavop.c  dsub.c      dtrmm.c     itrwri.c    lmmdmxwr.c      sc_norm.c\
dadd.c      ddot.c      dhrflct.c   dldlfact.c  dprotdiv.c  dsccopyv.c  dsmxfac.c   dsubvec.c   dtrmv.c     lmassrtf.c  lmmdsmxw.c      symbolic.c\
daddc.c     ddotvec.c   didot.c     dlldatax.c  dpsprot.c   dscunitv.c  dsmxmpd.c   dsum.c      dxminmax.c  lmchfail.c  lmmdvwri.c      wdinky.c\
daddcvec.c  delm.c      disamax.c   dlpdump.c   dqeqnsol.c  dset.c      dsmxmulv.c  dsumvec.c   dzero.c     lmdmxwri.c  lmmgdvwr.c      wqpexi.c\
daddvec.c   delmgen.c   disamaxv.c  dlpgrad.c   drot.c      dsetvec.c   dsmxrcx.c   dswap.c     dzerovec.c  lmdsmxwr.c  lmnamewr.c      wrexit.c\
daxpy.c     denrm2v.c   dlapy2.c    dmxtrnsp.c  drotg.c     dsign.c     dspr.c      dswapvec.c  dzyprod.c   lmdvwrit.c  lmprint.c       xerbla.c\
daxpyvec.c  dgemm.c     dlarfb.c    dnegvec.c   drotvec.c   dsmx22ev.c  dsptrf.c    dsyr.c      idamax.c    lmgdvwri.c  lmuvwri.c\
dcopy.c     dgemv.c     dlarf.c     dnrm2.c     drtmxsol.c  dsmx22sr.c  dsptrs.c    dsytf2.c    idamaxv.c   lmitemwr.c  lmuvwrit.c\
dcopyvec.c  dger.c      dlarfg.c    dnrm2vec.c  dscal.c     dsmxasrt.c  dsssq.c     dsytrf.c    iladlc.c    lmivwri.c   myreadfiddle.c\
dcossint.c  dgerq2.c    dlarft.c    dormr2.c    dscalvec.c  dsmxaupt.c  dsssqvec.c  dtmxsolv.c  iladlr.c    lmivwrit.c  patternmin.c\
anneal.cpp        dalloc.cpp   detagen.cpp   dlpcrsh.cpp  dqpcore.cpp  dqpsol.cpp    entropy.cpp       multistage.cpp  QNewt.cpp\
BaseOptimise.cpp  dbdpert.cpp  dfindp.cpp    dlpprt.cpp   dqpcrsh.cpp  _dsmxmpc.cpp  GainLossVar.cpp   naive.cpp       Rounding.cpp\
bunchi.cpp        dbndalf.cpp  dgetlamd.cpp  dprtsol.cpp  dqpdump.cpp  dsmxmpdc.cpp  gunique.cpp       Omega.cpp       simplex.cpp\
constant.cpp      dchkdat.cpp  dlpbgst.cpp   dqpchkp.cpp  dqpgrad.cpp  dtqadd.cpp    LP.cpp            Optclass.cpp    validate.cpp\
daddcon.cpp       ddelcon.cpp  dlpcore.cpp   dqpcolr.cpp  dqpprt.cpp   eigen.cpp     modelprocess.cpp  orderutils.cpp  winsor.cpp
    libsafeqp_la_CFLAGS = -I$(top_srcdir)/libsafeqp -fopenmp
    libsafeqp_la_CXXFLAGS = -I$(top_srcdir)/libsafeqp -fopenmp
    libsafeqp_la_CXXFLAGS += -std=gnu++1z
    libsafeqp_la_LDFLAGS = -lgomp
