bin_PROGRAMS = safeqp ETL logopt
logopt_SOURCES = logopt.cpp
logopt_CXXFLAGS = $(MY_DEF) $(MY_STD)
logopt_LDADD = ../libsafeqp/libsafeqp.la
safeqp_SOURCES = readin.cpp
safeqp_CXXFLAGS = $(MY_DEF) $(MY_STD)
safeqp_LDADD = ../libsafeqp/libsafeqp.la
ETL_SOURCES = ETL.cpp
ETL_CXXFLAGS = $(MY_DEF) $(MY_STD)
ETL_LDADD = ../libsafeqp/libsafeqp.la
